Anotaciones para no olvidarse

--- a/conclusiones.tex
+++ b/conclusiones.tex
@@ -83,7 +83,8 @@ Esto indica que tanto las técnicas que requieren especificaciones formales
 %y abren nuevas perspectivas para la investigación y el desarrollo de herramientas de prueba automatizadas, 
 %más efectivas y confiables en contextos reales.
 
-
+\pp{Tenemos que agregar trabajos futuros!}
+\pp{Acordarme de agregar las referencias a los papers de Cacho en la intro}
 
 % TODO: PABLO: Ver después.
 
