--- a/experimental.tex
+++ b/experimental.tex
@@ -867,8 +867,9 @@ detectar manualmente, y que \textsf{BEAPI} puede ser de gran ayuda para esta tar
     5.1.4 (RQ3). Además los budgets tienen que ser los mismos que en esa sección (60, 120 y 180,
     como mínimo. Sino parece que estamos eligiendo los budgets a propósito para
     que nos den bien los números. Y una vez que estén los números escribo como
-    interpretar los resultados.
-    Tenemos que charlar urgente.
+    interpretar los resultados. Pensandolo mejor, estos números tienen que estar
+    en RQ3, para responder bien RQ3, y después acá de nuevo agregando BEAPI Para
+    responder RQ7. Tenemos que charlar urgente.
 }
 
 \pp{Y no olvidarse de mencionar todas las técnicas en la configuración
